fixed issue with garment form overflowing the screen

--- a/src/app/shared/Components/garment-form/garment-form.scss
+++ b/src/app/shared/Components/garment-form/garment-form.scss
@@ -11,7 +11,7 @@
   display: flex;
   padding: 2rem;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   overflow-y: auto;
   z-index: 3;
 }
@@ -29,7 +29,6 @@
   flex-flow: column nowrap;
   gap: 1rem;
   padding: 2rem;
-  overflow-y: auto;
   animation: slideIn 0.3s ease-out;
   background: linear-gradient($color-gradient);
 
